--- a/templates/admin-list-dish.html
+++ b/templates/admin-list-dish.html
@@ -9,11 +9,11 @@
     </button>
 
     {{ if .Enabled }}
-    <button class="btn btn-disable-dish" title="enable">
+    <button class="btn btn-uncheck-dish" title="enable">
         <i class="bi bi-check-square"></i>
     </button>
     {{ else }}
-    <button class="btn btn-enable-dish" title="enable">
+    <button class="btn btn-check-dish" title="enable">
         <i class="bi bi-square"></i>
     </button>
     {{ end }}
