Remodelada página de administração

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,11 +4,10 @@
 {{ template "head" . }}
 
 <body>
-<div class="container m-3">
 
 {{ template "navbar" . }}
 
-<div class="card">
+<div class="card m-1">
 	<div class="card-header">
 		<h5>Seus pratos</h5>
 	</div>
@@ -40,7 +39,7 @@
 
 {{ template "footer" . }}
 
-</div>
+
 
 <script>
   	$(document).ready(function() {
