--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -18,7 +18,7 @@
 			<p>Você ainda não cadastrou nenhum prato.</p>
 			<p>Gostaria que criassemos alguns pratos para você como exemplo?</p>
 			<button id="btn-create-dishes" class="btn btn-link">Criar um cardápio de exemplo</button>
-			<button class="btn btn-link btn-add-dish">Adicionar um prato</button>
+			<a class="btn btn-link" href="dish">Adicionar um prato</a>
 		</div>
 		{{ else}}
 
@@ -35,18 +35,13 @@
 	</div>
 </div>
 
-{{ template "admin-new-dish" . }}
 <input id="current-user-id" value="{{ .UserId }}" hidden />
 <input id="current-company-id" value="{{ .CompanyId }}" hidden />
 
 {{ template "footer" . }}
 
-
-
 <script>
   	$(document).ready(function() {
-		//$('#description').focus();
-		//$('html, body').animate({ scrollTop: 0 }, 'fast');
   	});
 
 	$('.btn-delete-dish').click(function() {
@@ -68,10 +63,6 @@
 				alert(data.error);
 			}
 		});
-	});
-	
-	$('.btn-add-dish').click(function() {
-		$('#modal-new-dish').modal('show');
 	});
 
 	$('.btn-check-dish').click(function() {
