--- a/templates/admin/new-dish-images.html
+++ b/templates/admin/new-dish-images.html
@@ -19,6 +19,21 @@
 						<input id="CompanyId" name="CompanyId" type="number" value="{{ .CompanyId }}" hidden/>
 					</form>
 				</div>
+
+				<div class="mb-3">
+					<h5>2 - Selecione as imagens carregadas</h5>
+					<form action="/dish" method="post">
+						<div class="form-group">
+							<label for="selected-images">Selecione as imagens que deseja adicionar ao prato</label>
+							<select class="form-select" id="selected-images" name="selected-images" multiple>
+								{{ range .Images }}
+								<option value="">{{ .Name }}</option>
+								{{ end }}
+							</select>
+						</div>
+						<button type="submit" class="btn btn-primary mt-2">Adicionar</button>
+					</form>
+				</div>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Fechar</button>
