atualizado para documentação

--- a/templates/admin/admin-new-category.html
+++ b/templates/admin/admin-new-category.html
@@ -1,10 +1,10 @@
 {{ define "modal-new-category" }}
 
 <div class="modal fade" id="modal-new-category" tabindex="-1" aria-labelledby="modal-new-category" aria-hidden="true">
-	<div class="modal-dialog modal-fullscreen">
+	<div class="modal-dialog  modal-dialog-centered">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="modal-new-category">3 - Seção</h5>
+				<h5 class="modal-title">3 - Seção</h5>
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
@@ -27,7 +27,6 @@
 				</div>
 			<div>
 
-			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-outline-success">Anterior</button>
 				<button type="button" class="btn btn-outline-success">Próximo</button>
