--- a/templates/admin/modal-new-dish.html
+++ b/templates/admin/modal-new-dish.html
@@ -1,7 +1,7 @@
 {{ define "admin-new-dish" }}
 
 <div class="modal fade" id="modal-new-dish" tabindex="-1" aria-labelledby="modal-new-dish" aria-hidden="true">
-	<div class="modal-dialog modal-dialog-centered">
+	<div class="modal-dialog modal-fullscreen">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="modal-new-dish">Novo Prato</h5>
