--- a/templates/admin/admin-new-category.html
+++ b/templates/admin/admin-new-category.html
@@ -25,7 +25,7 @@
 				<div id="div-category-success" class="alert alert-success" role="alert" hidden>
 					<span id="span-category-success"></span>
 				</div>
-			<div>
+			</div>
 
 			<div class="modal-footer">
 				<button type="button" class="btn btn-outline-success">Anterior</button>
