--- a/templates/admin/dish.html
+++ b/templates/admin/dish.html
@@ -9,34 +9,10 @@
 
 <div class="container">
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-	Launch static backdrop modal
- </button>
-
-  template "modal-new-dish-images" . 
-  template "modal-pick-dish-images" . 
- {{ template "modal-new-category" . }}
-  template "modal-new-dish-name" . 
-
-<!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-	<div class="modal-dialog">
-	  <div class="modal-content">
-		 <div class="modal-header">
-			<h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-		 </div>
-		 <div class="modal-body">
-			...
-		 </div>
-		 <div class="modal-footer">
-			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-			<button type="button" class="btn btn-primary">Understood</button>
-		 </div>
-	  </div>
-	</div>
-</div>
+{{ template "modal-new-dish-images" . }}
+{{ template "modal-pick-dish-images" . }} 
+{{ template "modal-new-category" . }}
+{{ template "modal-new-dish-name" . }}
 
 </div>
 
@@ -48,7 +24,7 @@
 
 <script>
   	$(document).ready(function() {
-		//$('#staticBackdrop').modal('show');
+		$('#modal-new-dish-name').modal('show');
 		populateCategories();
   	});
 
