Incluido dias da semana no prato

--- a/templates/admin/new-dish-name.html.html
+++ b/templates/admin/new-dish-name.html.html
@@ -21,6 +21,37 @@
 					<input type="number" class="form-control" id="dish-price" name="Price" value="25.00" required>
 				</div>
 				<div class="mb-3">
+					<div class="mb-3">
+						<label for="days-of-week" class="form-label">Dias da Semana</label>
+						<div class="form-check form-switch">
+							<input class="form-check-input" type="checkbox" role="switch" id="monday-switch" checked>
+							<label class="form-check-label" for="monday-switch">Segunda-feira</label>
+						</div>
+						<div class="form-check form-switch">
+							<input class="form-check-input" type="checkbox" role="switch" id="tuesday-switch" checked>
+							<label class="form-check-label" for="tuesday-switch">Terça-feira</label>
+						</div>
+						<div class="form-check form-switch">
+							<input class="form-check-input" type="checkbox" role="switch" id="wednesday-switch" checked>
+							<label class="form-check-label" for="wednesday-switch">Quarta-feira</label>
+						</div>
+						<div class="form-check form-switch">
+							<input class="form-check-input" type="checkbox" role="switch" id="thursday-switch" checked>
+							<label class="form-check-label" for="thursday-switch">Quinta-feira</label>
+						</div>
+						<div class="form-check form-switch">
+							<input class="form-check-input" type="checkbox" role="switch" id="friday-switch" checked>
+							<label class="form-check-label" for="friday-switch">Sexta-feira</label>
+						</div>
+						<div class="form-check form-switch">
+							<input class="form-check-input" type="checkbox" role="switch" id="saturday-switch" checked>
+							<label class="form-check-label" for="saturday-switch">Sábado</label>
+						</div>
+						<div class="form-check form-switch">
+							<input class="form-check-input" type="checkbox" role="switch" id="sunday-switch" checked>
+							<label class="form-check-label" for="sunday-switch">Domingo</label>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
