--- a/templates/admin/modal-new-dish-report.html
+++ b/templates/admin/modal-new-dish-report.html
@@ -18,6 +18,10 @@
 					<li class="list-group-item">Imagem do prato</li>
 				</ul>
 			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-outline-success" data-dismiss="modal" data-bs-toggle="modal" data-bs-target="#modal-new-dish-name">Anterior</button>
+				<button type="button" class="btn btn-outline-success" data-dismiss="modal" disabled>Salvar</button>
+			</div>
 		</div>
 	</div>
 </div>
