--- a/templates/admin/modal-new-dish-images.html
+++ b/templates/admin/modal-new-dish-images.html
@@ -33,7 +33,7 @@
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Fechar</button>
-				<button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#modal-new-dish">Próximo</button>
+				<button type="button" class="btn btn-outline-success" data-dismiss="modal" data-bs-toggle="modal" data-bs-target="#modal-pick-dish-images">Próximo</button>
 			</div>
 		</div>
 	</div>
