--- a/templates/admin/modal-new-category.html
+++ b/templates/admin/modal-new-category.html
@@ -1,7 +1,7 @@
 {{ define "modal-new-category" }}
 
 <div class="modal fade" id="modal-new-category" tabindex="-1" aria-labelledby="modal-new-category" aria-hidden="true">
-	<div class="modal-dialog  modal-dialog-centered">
+	<div class="modal-dialog  modal-fullscreen">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title">3 - Seção</h5>
@@ -28,9 +28,9 @@
 			</div>
 
 			<div class="modal-footer">
-				<button type="button" class="btn btn-outline-success">Anterior</button>
-				<button type="button" class="btn btn-outline-success">Próximo</button>
-			</div>            
+				<button type="button" class="btn btn-outline-success" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#modal-new-dish-images">Anterior</button>
+				<button type="button" class="btn btn-outline-success" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#modal-new-dish-name">Próximo</button>
+			</div>
 		</div>
 	</div>
 </div>
