--- a/templates/admin/modal-new-dish-name.html
+++ b/templates/admin/modal-new-dish-name.html
@@ -17,7 +17,7 @@
 					<label for="dish-description" class="form-label">Descrição</label>
 				</div>					
 				<div class="mb-3 form-floating">
-					<input type="number" class="form-control" id="dish-price" name="Price" value="25.00" required>
+					<input type="number" class="form-control" id="dish-price" name="Price" required>
 					<label for="dish-price" class="form-label">Preço</label>
 				</div>
 				<div class="row small m-2">
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-outline-success" data-dismiss="modal" data-bs-toggle="modal" data-bs-target="#modal-pick-dish-images">Anterior</button>
+				<button type="button" class="btn btn-outline-success" data-dismiss="modal" data-bs-toggle="modal" data-bs-target="#modal-new-category">Anterior</button>
 				<button type="button" class="btn btn-outline-success" data-dismiss="modal" data-bs-toggle="modal" data-bs-target="#modal-new-dish-report">Próximo</button>
 			</div>
 		</div>
