--- a/templates/admin/modal-new-dish-report.html
+++ b/templates/admin/modal-new-dish-report.html
@@ -10,12 +10,12 @@
 
 			<div class="modal-body">
 				<ul class="list-group list-group-flush">
-					<li class="list-group-item">Feijoada</li>
-					<li class="list-group-item">Feijoada completa com bisteca e ovo frito separados</li>
-					<li class="list-group-item">R$ 25,00</li>
-					<li class="list-group-item">Prato principal
-					<li class="list-group-item">Segunda, Terça, Quarta, Quinta, Sexta, Sábado, Domingo</li>
-					<li class="list-group-item">Imagem do prato</li>
+					<li id="report-dish-name" class="list-group-item"></li>
+					<li id="report-dish-description" class="list-group-item"></li>
+					<li id="report-dish-price" class="list-group-item"></li>
+					<li id="report-dish-category" class="list-group-item"></li>
+					<li id="report-dish-weeekdays" class="list-group-item"></li>
+					<li id="report-dish-images" class="list-group-item"></li>
 				</ul>
 			</div>
 			<div class="modal-footer">
