--- a/templates/admin/modal-new-dish-images.html
+++ b/templates/admin/modal-new-dish-images.html
@@ -1,7 +1,7 @@
 {{ define "modal-new-dish-images" }}
 
 <div class="modal fade" id="modal-new-dish-images" tabindex="-1" aria-labelledby="modal-new-dish" aria-hidden="true">
-	<div class="modal-dialog modal-dialog-centered">
+	<div class="modal-dialog modal-fullscreen">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title">1 - Carrege novas fotos</h5>
